--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,18 @@ a:hover {
     color: var(--color-fg);
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 @keyframes opacity {
   0% {
     opacity: 1;
